# NFW

./: .gitignore  CMakeLists.txt  README.md  cost.h  demand.h  graph.h  io.h  main.cpp  mqcf.h  ue_fw.h  ue_gp.h  ue_nfw.h  ue_rfw.h  utils.h
data/: Braess_budgets.tntp  Braess_elasticity.tntp  CSE6015_net.tntp  CSE6015_trips.tntp  NineNode_budgets.tntp  NineNode_elasticity.tntp  NineNode_net.tntp  NineNode_trips.tntp  SiouxFalls_budgets.tntp  SiouxFalls_elasticity.tntp
